--- a/styles/main.css
+++ b/styles/main.css
@@ -1,22 +1,22 @@
 /* Base */
-@import url('base/_variables.css');
-@import url('base/_reset.css');
-@import url('base/_typography.css');
+@import url('./base/_variables.css');
+@import url('./base/_reset.css');
+@import url('./base/_typography.css');
 
 /* Layout */
-@import url('layout/header.css');
-@import url('layout/footer.css');
-@import url('layout/grid.css');
+@import url('./layout/header.css');
+@import url('./layout/footer.css');
+@import url('./layout/grid.css');
 
 /* Components */
-@import url('components/event-card.css');
-@import url('components/artist-card.css');
-@import url('components/calendar.css');
-@import url('components/budget.css');
-@import url('components/modal.css');
+@import url('./components/event-card.css');
+@import url('./components/artist-card.css');
+@import url('./components/calendar.css');
+@import url('./components/budget.css');
+@import url('./components/modal.css');
 
 /* Pages */
-@import url('pages/home.css');
-@import url('pages/event.css');
-@import url('pages/map.css');
-@import url('pages/artist.css');
+@import url('./pages/home.css');
+@import url('./pages/event.css');
+@import url('./pages/map.css');
+@import url('./pages/artist.css');
